--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "gulp-sass": "~1.0.0",
     "gulp-twig": "0.0.4",
     "gulp-util": "~3.0.1",
-    "gulp-livereload": "~2.1.1",
     "gulp-watch": "~1.0.7",
     "node-bourbon": "~1.2.3",
-    "node-neat": "~1.3.0"
+    "node-neat": "~1.3.0",
+    "main-bower-files": "~2.0.0",
+    "gulp-connect": "~2.0.6"
   }
 }
