--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "node-bourbon": "~1.2.3",
     "node-neat": "~1.3.0",
     "main-bower-files": "~2.0.0",
-    "gulp-connect": "~2.0.6"
+    "gulp-connect": "~2.0.6",
+    "gulp-browserify": "~0.5.0",
+    "hbsify": "~1.0.1",
+    "jquery": "~2.1.1"
   }
 }
