--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,8 @@
     "bourbon": "~4.0.2",
     "jquery": "~2.1.1",
     "modernizr": "~2.8.3"
+  },
+  "devDependencies": {
+    "modernizr": "~2.8.3"
   }
 }
