--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "gulp-connect": "~2.0.6",
     "gulp-browserify": "~0.5.0",
     "hbsify": "~1.0.1",
-    "jquery": "~2.1.1",
+    "jquery": "~1.11",
     "connect": "~3.2.0",
     "connect-livereload": "~0.4.0",
-    "gulp-livereload": "~2.1.1"
+    "gulp-livereload": "~2.1.1",
+    "backbone": "~1.1.2"
   }
 }
