--- a/bower.json
+++ b/bower.json
@@ -14,9 +14,9 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "modernizr": "~2.8.3"
+    "modernizr": "~2.8.3",
+    "unveil": "~1.3.0"
   }
 }
