--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "connect": "~3.2.0",
     "connect-livereload": "~0.4.0",
     "gulp-livereload": "~2.1.1",
-    "backbone": "~1.1.2"
+    "backbone": "~1.1.2",
+    "debowerify": "~0.8.2"
   }
 }
