--- a/package.json
+++ b/package.json
@@ -8,6 +8,18 @@
   "dependencies": {
     "express": "3.4.8"
   },
+  "browser": {
+    "PreloadJS": "./bower_components/PreloadJS/lib/preloadjs-0.4.1.min.js"
+  },
+  "browserify-shim": {
+    "PreloadJS": "createjs"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim",
+      "hbsify"
+    ] 
+  },
   "devDependencies": {
     "gulp": "~3.8.8",
     "bower": "~1.3.11",
@@ -19,13 +31,14 @@
     "node-neat": "~1.3.0",
     "main-bower-files": "~2.0.0",
     "gulp-connect": "~2.0.6",
-    "gulp-browserify": "~0.5.0",
     "hbsify": "~1.0.1",
     "jquery": "~1.11",
     "connect": "~3.2.0",
     "connect-livereload": "~0.4.0",
     "gulp-livereload": "~2.1.1",
     "backbone": "~1.1.2",
-    "debowerify": "~0.8.2"
+    "browserify": "~6.1.0",
+    "browserify-shim": "~3.8.0",
+    "vinyl-source-stream": "~0.1.1"
   }
 }
